@@ -1,5 +1,15 @@
 2002-06-16  Mark Kettenis  <kettenis@gnu.org>
 
+	* config/i386/tm-i386lynx.h (SAVED_PC_AFTER_CALL): Remove define.
+	(i386lynx_saved_pc_after_call): Remove prototype.
+	* i386ly-tdep.c: Include "i386-tdep.h".
+	(i386lynx_saved_pc_after_call): Make static.  Use
+	read_memory_nobpt instead of read_memory.  Use
+	read_memory_unsigned_integer instead of read_memory_integer.
+	(i386lynx_init_abi): New function.
+	(i386lynx_coff_osabi_sniffer): New function.
+	(_initialize_i386bsd_tdep): New function.
+
 	* config/i386/tm-i386.h (PARM_BOUNDARY, CALL_DUMMY,
 	CALL_DUMMY_LENGTH, CALL_DUMMY_START_OFFSET,
 	CALL_DUMMY_BREAKPOINT_OFFSET, FIX_CALL_DUMMY): Remove defines.
